public/climb It is now impossible to attempt a route he already climbed!

Added animation delay to my TextBox and vanlog. It now matches the squigley animation