@@ -6,6 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node server.js",
+		"loadDb": "node loadDb/climbData.js && node loadDb/messageData.js",
 		"dev": "nodemon server.js"
 	},
 	"repository": {
